--- a/src/suresh/components/Gallery/Gallery.css
+++ b/src/suresh/components/Gallery/Gallery.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+
+.gallery{
+  
+  width: 100%;
+}
+
+
 .gallery .hero {
   text-align: center;
   width: 100%;
