--- a/src/homepages/homecomponents/Reg.css
+++ b/src/homepages/homecomponents/Reg.css
@@ -31,6 +31,7 @@
     padding: 10px;
     border-radius: 7px;
     margin-bottom: 10vh;
+    padding-bottom: 5vh;
   }
   .registermaincontainer{
     height: 100%;
