--- a/src/homepages/Land.css
+++ b/src/homepages/Land.css
@@ -22,6 +22,11 @@
     justify-content: space-between;
 
 }
+.land-blur {
+    filter: blur(5px); /* Adjust the blur amount as needed */
+    pointer-events: none; /* Prevent interaction with blurred content */
+  }
+  
 .land1left{
     background-color: #FFFFFF3D;
     width: 58%;
@@ -61,66 +66,7 @@ text-align: center;
     text-align: center;
     
 }
-.land1right{
-    width: 450px;
-    display: flex;
-    height: 400px;
-    flex-direction: column;
-    background-color: #FFFFFF3D;
-    align-items: center;
-    border-radius: 10px;
-    margin-right: 40px;
-    justify-content: space-evenly;
 
-
-}
-.land1right>input,.land1right>div,.land1right>select{
-    width: 90%;
-    height: 40px;
-    padding: 5px 10px;
-    background-color: transparent;
-    color: #FFFFFF;
-    border: 1px solid #FFFFFF;
-    border-radius: 4px;
-    font-family: Outfit;
-font-size: 18px;
-font-weight: 500;
-line-height: 30.24px;
-}
-.land1right>select{
-
-}
-.land1right>div{
-    background-color: #FFFFFF;
-    color: black;
-    border-radius: 5px;
-    font-family: Outfit;
-font-size: 24px;
-font-weight: 500;
-line-height: 30.24px;
-text-align: center;
-
-
-}
-.land1right>input::placeholder{
-    font-family: Outfit;
-font-size: 18px;
-font-weight: 500;
-line-height: 30.24px;
-
-color: #FFFFFF;
-
-}
-.land1right>input:focus,.land1right>select:focus{
-    outline: none;
-}
-.land1right>input[type=submit]{
-    background-color: #1E31FB;
-    border: none;
-}
-.land1right>input[type=submit]:hover{
-    background-color: #626fff;
-}
 
 
 .land1iconcon{
@@ -298,60 +244,6 @@ margin-top: 5px;
 }
 .land3title span{
     color: #FF5900;
-}
-.landfeedcon{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-.feedcard{
-    width: 30%;
-    background-color: #FFFFFF;
-    box-shadow: 0px 4px 38px 0px #00000040;
-    border-radius: 9px;
-    
-    display: flex;
-    flex-direction: column;
-    
-
-}
-.land3feedimg{
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-   
-}
-.land3feedimg img{
-    height: 40px;
-    width: 40px;
-
-}
-.feedcard h1{
-    font-family: Outfit;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 40.32px;
-    text-align: center;
-    color: #7C1109;
-    margin: 20px auto;
-
-
-}
-.land3feedbtn{
-    margin: 0 auto ;
-    margin-bottom: -10px;
-    padding: 6px 40px;
-    font-family: Outfit;
-    font-size: 32px;
-    font-weight: 400;
-    line-height: 40.32px;
-    text-align: center;
-    color: white;
-    background-color: #6A0D06;
-    border-radius: 6px;
-
 }
 .land3wriereview{
   
@@ -567,7 +459,7 @@ margin-top: 5px;
     font-family: Outfit;
     font-size: 30px;
     font-weight: 600;
-    
+    color: white;
     text-align: center;
 
 }
@@ -578,6 +470,7 @@ margin-top: 5px;
     background-color: #7C1109;
     text-align: center;
     margin: 0 auto;
+    color: white;
     padding: 8px 30px;
     border-radius: 3px;
     margin-bottom:-5px ;
@@ -1049,3 +942,50 @@ margin-top: 5px;
 
 }
 }
+
+
+/* Land.css */
+
+/* Image overlay styles */
+.popupimage-overlay {
+    position:absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: auto;
+    background-color: rgba(0, 0, 0, 0.7); /* Black background with transparency */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+  
+  .popupimage-container {
+    position: relative;
+    
+    padding: 30px;
+    border-radius: 8px;
+  }
+  
+  .popupimage-container > button {
+    position: absolute;
+    top: 0px;
+    right:0px;
+    
+    color: red;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+  }
+  .popupcloseimage-button{
+    background: transparent;
+  }
+  .popupclose-button:hover {
+    background-color: darkred;
+  }
+  
+   img {
+    max-width:90vh;
+    height:;
+  }
+  
