--- a/src/suresh/components/Connect/pages/Connect.css
+++ b/src/suresh/components/Connect/pages/Connect.css
@@ -71,20 +71,24 @@
 
 }
 .map-inner-container .row{
-    width: 100%;
-    height: 300px;
-    border: 1px solid ;
-    background: #d9d9d9;
+    width: auto;
+    height: auto;
+    
+    
     border: none;
-    display: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    
+   
+    
 }
-.map-inner-container .row h3{
+.map-inner-container .row iframe{
+    width: 70vw;
+    height: 50vh;
+    border-radius: 5px;
+}
+/* .map-inner-container .row h3{
     font-size: 30px;
     font-family: "Outfit";
-}
+} */
 .social-box {
     text-align: center;
 
