--- a/src/suresh/components/Connect/pages/Connect.css
+++ b/src/suresh/components/Connect/pages/Connect.css
@@ -4,6 +4,7 @@
     justify-content: center;
     height: fit-content;
     background: #fefafa;
+    margin-top: 8vh;
 }
 .connect .connect-container{
     width: 100%;
