--- a/src/Admin.css
+++ b/src/Admin.css
@@ -15,6 +15,8 @@
     display: block;
     padding: 20px;
     z-index: 23;
+    height: 11vh;
+  
    
    
 
@@ -50,17 +52,20 @@
     padding: 30px;
     position: absolute;
     left: 30%;
+    margin-bottom: 20px;
+   overflow-y: scroll;
     background-color: aliceblue;
     flex: 1;
-    height: 100vh;
+    height: 87vh;
     margin: 0 auto;
-    border: 2px solid red;
+    
+    
     margin-top: 94px;
   }
   .adashmain{
     width: 100%;
     height: 100%;
-    padding: 2;
+    padding: 20px;
 }
 .adashmain > h1{
     font-family: Outfit;
