--- a/src/homepages/homecomponents/Header.css
+++ b/src/homepages/homecomponents/Header.css
@@ -89,7 +89,10 @@ li {
     color: black;
     background: #FFFFFF;
 }
-
+.navcar a:hover{
+    background-color: rgb(81, 118, 221);
+    color: white;
+}
 /* Hidden state for the navbar */
 .navbar-container.hidden {
     top: -100px; 
@@ -102,7 +105,7 @@ li {
 
 .navul li a.active-link {
     color: #FF7F50;
-    font-weight: bold;
+    /* font-weight: bold; */
 }
 
 /* Hamburger icon styles */
