--- a/src/Home.css
+++ b/src/Home.css
@@ -1,6 +1,6 @@
 .homecontainer{
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 
 .popupimage-overlay {
@@ -18,7 +18,7 @@
   
   .popupimage-container {
     position: relative;
-    
+   
     padding: 30px;
     border-radius: 8px;
   }
@@ -29,7 +29,8 @@
     right:0px;
     
     color: red;
-    border: none;
+    
+    
     font-size: 20px;
     cursor: pointer;
   }
@@ -40,8 +41,19 @@
     background-color: darkred;
   }
   
-   img {
-    max-width:90vh;
+  .popupimage-container img{
+    max-width:50vw;
+   
+    
     
   }
   
+  @media (max-width: 768px){
+    .popupimage-container img{
+      max-width:50vw;
+     
+      
+      
+    }
+
+  }
