--- a/src/homepages/homecomponents/Reelslider.css
+++ b/src/homepages/homecomponents/Reelslider.css
@@ -2,30 +2,28 @@
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  display: flex;
-  justify-content: center; /* Center the slider container */
-  align-items: center; /* Center vertically */
+ /* Center vertically */
 }
 
 .swiper_container {
   width: 100%;
   height: auto;
-  position: relative;
+ 
 }
 
-.swiper-slide {
+.reelslide {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 80%; /* Adjust width */
+  width: 100%; /* Adjust width */
   height: 100%; /* Adjust height */
-  position: relative;
+  
 }
 
-.swiper-slide video {
-  width: 27vw;
-  height: 68vh;
-  border-radius: 1rem;
+.reelslide video {
+  width: 24vw;
+ 
+  border-radius: 5px;
   object-fit: cover;
 }
 
@@ -43,7 +41,7 @@
   width: 3.5rem;
   height: 3.5rem;
   border-radius: 50%;
-  filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
+ 
   display: flex;
   justify-content: center;
   align-items: center;
@@ -62,9 +60,15 @@
 }
 
 .swiper-pagination .swiper-pagination-bullet {
-  /* filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1)); */
+  filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
 }
 
 .swiper-pagination .swiper-pagination-bullet-active {
   background: var(--primary);
+}
+
+
+@media (max-width: 768px){
+
+
 }
