--- a/src/homepages/homecomponents/Reg.css
+++ b/src/homepages/homecomponents/Reg.css
@@ -8,6 +8,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 5vh auto;
+    font-family: outfit;
   }
   .registparent{
     
