--- a/src/homepages/homecomponents/Testimonials.css
+++ b/src/homepages/homecomponents/Testimonials.css
@@ -2,8 +2,8 @@
     
     width: 100%;
    
-  
-  .marq {
+}
+  .marq{
     width: 100vw; /* Ensures the marquee spans the full width */
     height: 300px; /* Reduce height for better alignment */
     display: flex;
@@ -13,6 +13,8 @@ flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
     height: auto;
+    padding: 10px 0;
+    background-color: transparent;
     
 }
   
@@ -56,11 +58,59 @@ flex-direction: row;
   .land3feedbtn {
     padding: 10px 20px;
     font-family: 'Outfit', sans-serif;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 400;
     color: white;
     background-color: #6a0d06;
     border-radius: 6px;
     text-align: center;
   }
+
+  @media (max-width: 768px){
+
+    .marq{
+      width: 100vw; /* Ensures the marquee spans the full width */
+      height: 300px; /* Reduce height for better alignment */
+      display: flex;
+  flex-direction: row;
   
+      width: 100%;
+      justify-content: space-evenly;
+      align-items: center;
+      height: auto;
+      
+  }
+  .feedcard {
+    width: 200px;
+    height: 200px;
+    background-color: #ffffff;
+    box-shadow: 0px 4px 38px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 9px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin:0 4vw;
+    padding: 20px;
+    
+  }
+  .feedcard h1 {
+    font-family: 'Outfit', sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: center;
+    color: #7c1109;
+    margin: 15px auto;
+  }
+  .land3feedbtn {
+    padding: 2px 20px;
+    font-family: 'Outfit', sans-serif;
+    font-size: 11px;
+    font-weight: 400;
+    color: white;
+    background-color: #6a0d06;
+    border-radius: 6px;
+    text-align: center;
+  }
+
+  }
