--- a/src/suresh/components/Gallery/Gallery.css
+++ b/src/suresh/components/Gallery/Gallery.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 .Gallerypart{
   width: 100%;
+  padding-top: 60px;
 }
 .Gallerypart .galleryhero {
   text-align: center;
