--- a/src/homepages/homecomponents/Reelslider.css
+++ b/src/homepages/homecomponents/Reelslider.css
@@ -2,12 +2,14 @@
   width: 100%;
   height: 100%;
   margin: 0 auto;
+  
  /* Center vertically */
 }
 
 .swiper_container {
   width: 100%;
-  height: auto;
+  padding: 2%;
+
  
 }
 
@@ -15,16 +17,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%; /* Adjust width */
-  height: 100%; /* Adjust height */
+  width: 350px; /* Adjust width */
+  height: 70%; /* Adjust height */
   
 }
 
 .reelslide video {
-  width: 24vw;
- 
+  width: 320px;
+    
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   border-radius: 5px;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .slider-controler {
