--- a/src/homepages/Menu.css
+++ b/src/homepages/Menu.css
@@ -68,6 +68,9 @@
     padding: 2%;
     gap: 4vh;
 }
+.menu1container > div{
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+}
 .manu1up{
     background-color: white;
     display: flex;
@@ -90,6 +93,7 @@
 .manu1up >div img{
     width: 100%;
     height: 100%;
+    
     
    
 }
@@ -121,10 +125,14 @@
     font-weight: 700;
     line-height: 25.2px;
     text-align: center;
-    padding: 4px 10px;
+    padding: 8px 70px;
     color: white;
     border-radius: 3px;
 
+}
+.manu1up >div >button:hover{
+    background-color: black;
+    color: white;
 }
 
 
@@ -172,6 +180,10 @@
     text-align: center;
     color: #FFB30E;
     background-color: #6A0D06;
+}
+.mnbtn button:hover{
+    color: white;
+    background-color: black;
 }
 @media (max-width: 768px){
     .manu1up{
