--- a/src/homepages/homecomponents/Reg.css
+++ b/src/homepages/homecomponents/Reg.css
@@ -9,6 +9,7 @@
     align-items: center;
     margin-top: 5vh auto;
     font-family: outfit;
+
   }
   .registparent{
     
@@ -24,6 +25,7 @@
     border-radius: 7px;
     margin-bottom: 10vh;
     padding-bottom: 5vh;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
   }
   .registermaincontainer{
     height: 100%;
@@ -64,6 +66,7 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
   }
   
 .formsub {
@@ -114,12 +117,13 @@
     border-radius: 5px;
     font-size: 18px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.1s ease;
     display: block;
     
   }
   .formbtn:hover {
-    background-color: #ec6359;
+    background-color:black;
+    color: white;
   } 
   .tetxarea{
   width: 80%;
