--- a/src/suresh/components/Connect/pages/Connect.css
+++ b/src/suresh/components/Connect/pages/Connect.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: fit-content;
+    
     background: #fefafa;
     margin-top: 8vh;
 }
@@ -67,13 +67,13 @@
 .map-inner-container .map-column{
     width: 95%;
     display: flex;
+    
     align-items: center;
     justify-content: space-between;
 
 }
 .map-inner-container .row{
     width: auto;
-    height: auto;
     
     
     border: none;
@@ -84,6 +84,8 @@
 .map-inner-container .row iframe{
     width: 70vw;
     height: 100%;
+    height: 50vh;
+    
     border-radius: 5px;
 }
 /* .map-inner-container .row h3{
